kubernetes/blue-green/service_blue.yml
kind: Service
apiVersion: v1
metadata:
  name: grid-blue
spec:
  selector:
    app: grid-blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
