kubernetes/blue-green/ingress_green.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grid
spec:
  rules:
  - host: breizhcamp.tes
    http:
      paths:
       - backend:
          serviceName: grid-green
          servicePort: 80
